:lipstick:Design: nav및 footer연결 및 index connect
nav 및 footer 복붙 가능! index 현재 가능한 데까지 연결

--- a/index.html
+++ b/index.html
@@ -69,147 +69,6 @@
           <section>
             <div class="new-card-container">
               <div class="slider">
-                <div class="card">
-                  <div class="card-image-container">
-                    <img src="./fake-img/paris.png">
-                  </div>
-                  <div class="card-content-container">
-                    <h2>와인 가서 프랑스 한잔</h2>
-                    <h3>목표: 300만원</h3>
-                    <h3>12개월</h3>
-                    <div class="card-tags">
-                      <a href="">장기</a>
-                      <a href="">여행</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-image-container">
-                    <img src="./fake-img/house.png">
-                  </div>
-                  <div class="card-content-container">
-                    <h2>내집 마련의 꿈..!</h2>
-                    <h3>목표: 3억 1000만원</h3>
-                    <h3>84개월</h3>
-                    <div class="card-tags">
-                      <a href="">장기</a>
-                      <a href="">내집</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-image-container">
-                    <img src="./fake-img/house.png">
-                  </div>
-                  <div class="card-content-container">
-                    <h2>내집 마련의 꿈..!</h2>
-                    <h3>목표: 3억 1000만원</h3>
-                    <h3>84개월</h3>
-                    <div class="card-tags">
-                      <a href="">장기</a>
-                      <a href="">내집</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-image-container">
-                    <img src="./fake-img/house.png">
-                  </div>
-                  <div class="card-content-container">
-                    <h2>내집 마련의 꿈..!</h2>
-                    <h3>목표: 3억 1000만원</h3>
-                    <h3>84개월</h3>
-                    <div class="card-tags">
-                      <a href="">장기</a>
-                      <a href="">내집</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-image-container">
-                    <img src="./fake-img/house.png">
-                  </div>
-                  <div class="card-content-container">
-                    <h2>내집 마련의 꿈..!</h2>
-                    <h3>목표: 3억 1000만원</h3>
-                    <h3>84개월</h3>
-                    <div class="card-tags">
-                      <a href="">장기</a>
-                      <a href="">내집</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-image-container">
-                    <img src="./fake-img/house.png">
-                  </div>
-                  <div class="card-content-container">
-                    <h2>내집 마련의 꿈..!</h2>
-                    <h3>목표: 3억 1000만원</h3>
-                    <h3>84개월</h3>
-                    <div class="card-tags">
-                      <a href="">장기</a>
-                      <a href="">내집</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-image-container">
-                    <img src="./fake-img/house.png">
-                  </div>
-                  <div class="card-content-container">
-                    <h2>내집 마련의 꿈..!</h2>
-                    <h3>목표: 3억 1000만원</h3>
-                    <h3>84개월</h3>
-                    <div class="card-tags">
-                      <a href="">장기</a>
-                      <a href="">내집</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-image-container">
-                    <img src="./fake-img/house.png">
-                  </div>
-                  <div class="card-content-container">
-                    <h2>내집 마련의 꿈..!</h2>
-                    <h3>목표: 3억 1000만원</h3>
-                    <h3>84개월</h3>
-                    <div class="card-tags">
-                      <a href="">장기</a>
-                      <a href="">내집</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-image-container">
-                    <img src="./fake-img/house.png">
-                  </div>
-                  <div class="card-content-container">
-                    <h2>내집 마련의 꿈..!</h2>
-                    <h3>목표: 3억 1000만원</h3>
-                    <h3>84개월</h3>
-                    <div class="card-tags">
-                      <a href="">장기</a>
-                      <a href="">내집</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-image-container">
-                    <img src="./fake-img/house.png">
-                  </div>
-                  <div class="card-content-container">
-                    <h2>내집 마련의 꿈..!</h2>
-                    <h3>목표: 3억 1000만원</h3>
-                    <h3>84개월</h3>
-                    <div class="card-tags">
-                      <a href="">장기</a>
-                      <a href="">내집</a>
-                    </div>
-                  </div>
-                </div>
-
               </div>
               <div class="prev"><i class="fa-solid fa-angle-right prev-arrow"></i></div>
               <div class="next"><i class="fa-solid fa-angle-right"></i></div>
@@ -295,8 +154,8 @@
   </div>
 
   <!-- script -->
-  <script src="./js/index.js"></script>
-  <script src="js/nav.js"></script>
+  <script src="./js/index.js" type="module"></script>
+  <script src="js/nav.js" type="module"></script>
   <!-- script end -->
 </body>
 
