--- a/html/mypage.html
+++ b/html/mypage.html
@@ -52,7 +52,7 @@
                   <div class="numbers">
                     <div class="item">
                       <span id="postcount">0</span>
-                      Posts
+                      <a href="">Posts</a>
                     </div>
                     <div class="border"></div>
                     <div class="item">
