:sparkles:Feat: create login API

--- a/html/signup.html
+++ b/html/signup.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <!-- <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" /> -->
   <title>리치메이커 : 회원가입 페이지</title>
 </head>
 
@@ -91,13 +91,11 @@
     </div>
   </div>
 
-
   <footer>
     <!-- footer 삽입 -->
   </footer>
-
   <script src="/js/signup.js"></script>
-  <!-- <script src="js/nav.js" type="module"></script> -->
+  <script src="js/nav.js" type="module"></script>
 </body>
 
 </html>
