--- a/html/login.html
+++ b/html/login.html
@@ -13,13 +13,13 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 
+  <!-- css -->
+  <link rel="stylesheet" href="/css/login.css" />
 
-
-  <link rel="stylesheet" href="./css/reset.css" />
+  <!-- <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css" />
   <link rel="stylesheet" href="./css/index.css" />
-  <link rel="stylesheet" href="/css/login.css" />
-  <script src="./js/index.js"></script>
+  <script src="./js/index.js"></script> -->
   <title>리치메이커 : 로그인 페이지</title>
 </head>
 
@@ -41,15 +41,15 @@
           </p>
         </div>
       </div>
-    </footer>
-  </div> -->
+    </footer> -->
+  </div>
   <div class="title">
     <div>
       <h1>WELCOME</h1>
     </div>
     <div style="margin-left: 1%;">
       <div>회원이 아니신가요?</div>
-      <a>
+      <a href="/html/signup.html" style="text-decoration: none;">
         <div>회원가입 하러 가기</div>
       </a>
     </div>
@@ -70,14 +70,18 @@
         </div>
       </div>
       <div class="button_box">
-        <button type="button" class="btn btn-outline-light" style="color: black;">로그인 하기</button>
+        <!-- <button type="button" class="btn btn-outline-light" style="color: black;" onclick="test()">로그인
+          하기</button> -->
+        <button type="button" class="btn btn-outline-light" style="color: black;" onclick="handleLogin()">로그인
+          하기</button>
       </div>
     </div>
 
   </div>
 
+  <!-- <script type="module" src="/js/api.js"></script> -->
+  <script src="/js/login.js"></script>
   <!-- script -->
-  <script src="js/nav.js"></script>
   <!-- <script
     type="module"
     src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -86,6 +90,7 @@
     nomodule
     src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script> -->
+  <!-- <script src="js/nav.js" type="module"></script> -->
 </body>
 
 </html>
