:bug:Fix: header, footer 모듈 연결 수정
23.05.24.

--- a/nav.html
+++ b/nav.html
@@ -12,3 +12,10 @@
   <i class="xi-bars"></i>
   <i class="xi-close"></i>
 </div>
+<div class="nav-drop-menu">
+  <ul>
+    <li><a href="">나의 가계부</a></li>
+    <li><a href="">리치메이커 챌린지</a></li>
+    <li><a href="">마이페이지</a></li>
+  </ul>
+</div>
