:lipstick:Design: list추가

--- a/index.html
+++ b/index.html
@@ -60,15 +60,16 @@
         <div class="new-challenge">
           <div class="main-nav">
             <span>이달의 신규 챌린지</span>
-            <span class="new-challenge-count">89</span>
+            <span class="new-challenge-count"></span>
             <div class="button-cover">
-              <a href="">+</a>
+              <a href="/list.html?query=new">+</a>
             </div>
           </div>
           <hr class="bar">
           <section>
             <div class="new-card-container">
               <div class="slider">
+                <!-- 카드 삽입 위치 -->
               </div>
               <div class="prev"><i class="fa-solid fa-angle-right prev-arrow"></i></div>
               <div class="next"><i class="fa-solid fa-angle-right"></i></div>
@@ -79,7 +80,7 @@
           <div class="main-nav">
             <span>상위 챌린지</span>
             <div class="button-cover">
-              <a href="">+</a>
+              <a href="/list.html?query=top">+</a>
             </div>
           </div>
           <hr class="bar">
@@ -155,7 +156,7 @@
 
   <!-- script -->
   <script src="./js/index.js" type="module"></script>
-  <script src="js/nav.js" type="module"></script>
+  <script src="./js/nav.js" type="module"></script>
   <!-- script end -->
 </body>
 
