--- a/nav.html
+++ b/nav.html
@@ -6,9 +6,9 @@
             <a href="">로그아웃</a>
         </div> -->
 <h1>
-  <img src="./img/richmaker-logo.png" alt="" />
+  <a href="/"><img src="./img/richmaker-logo.png" alt="" /></a>
 </h1>
-<div class="menu_btn" onclick="handleBtn()">
+<div class="menu_btn">
   <i class="xi-bars"></i>
   <i class="xi-close"></i>
 </div>
