:books: Docs: update user API

--- a/html/login.html
+++ b/html/login.html
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div class="button_box">
-        <!-- <button type="button" class="btn btn-outline-light" style="color: black;" onclick="test()">로그인
+        <!-- <button type="button" class="btn btn-outline-light" style="color: black;" onclick="login()">로그인
           하기</button> -->
         <button type="button" class="btn btn-outline-light" style="color: black;" onclick="handleLogin()">로그인
           하기</button>
