--- a/html/signup.html
+++ b/html/signup.html
@@ -8,6 +8,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
+
+
+
   <!-- css -->
   <link rel="stylesheet" href="/css/signup.css" />
 
@@ -94,8 +97,11 @@
   <footer>
     <!-- footer 삽입 -->
   </footer>
+  <!-- <script type="module" src="/js/conf.js"></script> -->
   <script src="/js/signup.js"></script>
-  <script src="js/nav.js" type="module"></script>
+  <!-- <script src="js/nav.js" type="module"></script> -->
+
+  <!-- <script type="module" src="/js/api.js"></script> -->
 </body>
 
 </html>
