--- a/login.html
+++ b/login.html
@@ -2,18 +2,29 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/reset.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+
+    <!-- css -->
+    <link rel="stylesheet" href="/css/login.css" />
+
+    <!-- <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css" />
   <link rel="stylesheet" href="./css/index.css" />
-  <script src="./js/index.js"></script>
-  <title>리치메이커 : 소비챌린지</title>
+  <script src="./js/index.js"></script> -->
+    <title>리치메이커 : 로그인 페이지</title>
 </head>
 
 <body>
-  <div class="Wrap">
+    <!-- <div class="Wrap">
     <header>
       <div class="container">
         <div class="nav-container"></div>
@@ -30,11 +41,56 @@
           </p>
         </div>
       </div>
-    </footer>
-  </div>
+    </footer> -->
+    </div>
+    <div class="title">
+        <div>
+            <h1>WELCOME</h1>
+        </div>
+        <div style="margin-left: 1%;">
+            <div>회원이 아니신가요?</div>
+            <a href="/html/signup.html" style="text-decoration: none;">
+                <div>회원가입 하러 가기</div>
+            </a>
+        </div>
+    </div>
 
-  <!-- script -->
-  <script src="js/nav.js"></script>
+    <div class="container">
+        <div class="inner_box">
+            <div class="mb-3 row">
+                <label for="email" class="col-sm-2 col-form-label">Email:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="email" placeholder="이메일을 입력해 주세요.">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="password" class="col-sm-2 col-form-label">Password:</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="password" placeholder="비밀번호를 입력해 주세요.">
+                </div>
+            </div>
+            <div class="button_box">
+                <!-- <button type="button" class="btn btn-outline-light" style="color: black;" onclick="login()">로그인
+          하기</button> -->
+                <button type="button" class="btn btn-outline-light" style="color: black;" onclick="handleLogin()">로그인
+                    하기</button>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- <script type="module" src="/js/api.js"></script> -->
+    <script src="/js/login.js"></script>
+    <!-- script -->
+    <!-- <script
+    type="module"
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+    nomodule
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script> -->
+    <!-- <script src="js/nav.js" type="module"></script> -->
 </body>
 
 </html>
