:bug:Fix: merge 오류 수정

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="Wrap">
     <header>
       <div class="container">
-        <div class="nav container">
+        <div class="nav-container">
           <!-- navbar 삽입 -->
         </div>
       </div>
