--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
 <h1>
   <a href="/"><img src="./img/richmaker-logo.png" alt="" /></a>
 </h1>
-<div class="menu_btn">
+<div class="menu_btn" onclick="handleBtn()">
   <i class="xi-bars"></i>
   <i class="xi-close"></i>
 </div>
