:sparkles:Feat: create income&saving and develop consume

--- a/consume.html
+++ b/consume.html
@@ -17,6 +17,9 @@
 <body>
     <div class="Wrap">
         <header>
+            <nav class="nav container">
+                <!-- navbar 삽입 -->
+            </nav>
             <div class="container">
                 <div class="header_btn">
                     <a href="./signup.html">회원가입</a>
@@ -80,24 +83,20 @@
                         <p id="date"></p>
                     </div>
                     <div class="consume-info">
-                        <h3> 소비 분류: </h3>
-                        <p id="consume-style"></p>
+                        <h3 style="text-align:center">소비 분류</h3>
+                        <p id="consume-style"> </p>
                     </div>
                     <div class="consume-info">
-                        <h3> 매장 이름(제품): </h3>
-                        <p id="placename"></p>
+                        <p id="placename">매장 이름(제품) </p>
                     </div>
                     <div class="consume-info">
-                        <h3> 매장 주소: </h3>
-                        <p id="placewhere"></p>
+                        <p id="placewhere">매장 주소 </p>
                     </div>
                     <div class="consume-info">
-                        <h3> 수량: </h3>
-                        <p id="amount"></p>
+                        <p id="amount">수량 </p>
                     </div>
                     <div class="consume-info">
-                        <h3> 지출 금액 단가: </h3>
-                        <p id="cost"></p>
+                        <p id="cost">지출 금액 단가 </p>
                     </div>
                     <div style="padding:20px;">
                         <button onclick="handlePost()">저장</button>
