--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/module.css">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css" />
-  <link rel="stylesheet" href="./css/index.css" />
-  <link rel="stylesheet" href="./css/index2.css" />
+  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="css/index2.css" />
+  <script src="js/index.js" type="module"></script>
   <title>리치메이커 : 소비챌린지</title>
 </head>
 
 <body>
   <div class="Wrap">
     <header>
-      <div class="container">
-        <div class="nav-container">
-          <!-- navbar 삽입 -->
-        </div>
-      </div>
-      <nav>
+
+      <nav class="container">
+        <!-- navbar 삽입 -->
+      </nav>
+
+      <div class="nav-drop-menu">
         <ul>
           <li><a href="">나의 가계부</a></li>
           <li><a href="">리치메이커 챌린지</a></li>
           <li><a href="">마이페이지</a></li>
         </ul>
-      </nav>
+      </div>
     </header>
     <section class="Main">
       <div class="main-container">
@@ -155,8 +157,13 @@
   </div>
 
   <!-- script -->
-  <script src="./js/index.js" type="module"></script>
-  <script src="./js/nav.js" type="module"></script>
+  <script>
+    function handleBtn() {
+      document.querySelector(".nav-drop-menu").classList.toggle("on");
+      document.querySelector(".menu_btn").classList.toggle("on");
+    }
+  </script>
+  <script src="js/nav.js" type="module"></script>
   <!-- script end -->
 </body>
 
