:sparkles:Feat: update User API
회원 정보 수정,비밀번호 찾기  HTML,CSS,JS 생성
회원가입 및 로그인 API 수정
API JS에 유저 API 기능 추가

--- a/signup.html
+++ b/signup.html
@@ -92,6 +92,10 @@
             발급 받기</button>
         </div>
         <div class="button_box">
+          <button type="button" class="btn btn-outline-secondary custom-button" id="get_auth_code"
+            style="display: none;">인증 코드 재 요청</button>
+        </div>
+        <div class="button_box">
           <button type="button" class="btn btn-outline-secondary custom-button" id="auth_button">가입</button>
         </div>
       </div>
