:hammer:Refact: updateUserInfo.html css
로그인,회원정보 수정 css 수정
test코드 추가
> nav바에 적용할 토큰 만료시간 출력 및 만료시 삭제 기능 추

--- a/login.html
+++ b/login.html
@@ -73,6 +73,16 @@
         <button type="button" class="btn btn-outline-light" style="color: black;" id="login_button">로그인
           하기</button>
       </div>
+      <div>
+        <a href="/updateUserInfo.html">
+          <button type="button" class="btn btn-outline-light custom_btn">비밀번호 찾기</button>
+        </a>
+      </div>
+      <div>
+        <a href="/updateUserInfo.html">
+          <button type="button" class="btn btn-outline-light custom_btn">휴면 계정 활성화 신청</button>
+        </a>
+      </div>
     </div>
 
   </div>
